[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "panspace"
version = "0.1.0"
description = "Indexing assemblies with autoencoders and FCGR"
authors = [
    { name = "Jorge Avila Cartes", email = "jorgeavilacartes@gmail.com" },
]
readme = "README.md"
license = { file = "LICENSE" }
keywords = ["index", "fcgr", "assemblies", "bacteria"]
classifiers = [
    "Intended Audience :: Bioinformaticians",
    "Programming Language :: Python",
]
dependencies = [
    "typer[all]==0.12.3",
    "scikit-learn==1.3.2",
    "cleanlab==2.5.0",
    "complexcgr==0.8.0",
    "pandas==2.1.4",
    "rich==13.7.0",
    "rich-argparse==1.4.0",
    "tqdm==4.66.1",
]

[project.optional-dependencies]
cpu = [
    "tensorflow==2.15.1",
    "tensorflow-addons==0.23.0",
    "faiss-cpu==1.7.2",
]
gpu = [
    "tensorflow[and-cuda]==2.15.1",
    "tensorflow-addons==0.23.0",
    "faiss-gpu==1.7.2",
]

[project.scripts]
panspace = "panspace.panspace:app"
