[metadata]
name = panspace
version = attr: panspace.__version__
author = Jorge Avila Cartes
author_email = jorgeavilacartes@gmail.com
description = Indexing assemblies with autoencoders and FCGR
long_description = file: README.md #, CHANGELOG.rst, LICENSE.rst
keywords = index, fcgr, assemblies, bacteria
license = GNU GENERAL PUBLIC LICENSE
license_files = LICENSE
classifiers =
    Intended Audience :: Bioinformaticians
    Programming Language :: Python

[options]
include_package_data = True
packages = find:
package_dir = 
    =src
python_requires = >=3.9, <=3.11
install_requires = file: requirements.txt

[options.entry_points]
console_scripts =
    panspace = panspace.panspace:app
    
[options.packages.find]
where = src